--- a/0x02-ES6_classes/package.json
+++ b/0x02-ES6_classes/package.json
@@ -1,15 +1,16 @@
 {
     "scripts": {
-        "lint": "./node_modules/.bin/eslint",
-        "check-lint": "lint [0-9]*.js",
+        "lint": "cross-env npx eslint",
+        "check-lint": "npm run lint [0-9]*.js",
         "dev": "npx babel-node",
         "test": "jest",
-        "full-test": "./node_modules/.bin/eslint [0-9]*.js && jest"
+        "full-test": "npm run lint [0-9]*.js && jest"
     },
     "devDependencies": {
         "@babel/core": "^7.6.0",
-        "@babel/preset-env": "^7.6.0",
         "@babel/node": "^7.8.0",
+        "@babel/preset-env": "^7.6.0",
+        "cross-env": "^7.0.3",
         "eslint": "^6.4.0",
         "eslint-config-airbnb-base": "^14.0.0",
         "eslint-plugin-import": "^2.18.2",
