--- a/0x02-ES6_classes/package.json
+++ b/0x02-ES6_classes/package.json
@@ -1,10 +1,10 @@
 {
     "scripts": {
-        "lint": "./node_modules/.bin/eslint",
-        "check-lint": "lint [0-9]*.js",
+        "lint": "cross-env npx eslint",
+        "check-lint": "npm run lint [0-9]*.js",
         "dev": "npx babel-node",
         "test": "jest",
-        "full-test": "./node_modules/.bin/eslint [0-9]*.js && jest"
+        "full-test": "npm run lint [0-9]*.js && jest"
     },
     "devDependencies": {
         "@babel/core": "^7.6.0",
@@ -14,6 +14,7 @@
         "eslint-config-airbnb-base": "^14.0.0",
         "eslint-plugin-import": "^2.18.2",
         "eslint-plugin-jest": "^22.17.0",
-        "jest": "^24.9.0"
+        "jest": "^24.9.0",
+        "cross-env": "^7.0.3"
     }
 }
